--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "worker-name",
+  "name": "hackg12-website",
   "compatibility_date": "2025-06-19",
   "assets": {
     "directory": "./dist"
